--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,10 +2,12 @@
 @import "custom";
 
 :root {
-  --indent: 8vw;
+  --page-max-width: 1280px;
+
+  --indent: min(8vw, calc(var(--page-max-width) * 0.08));
   --text-gap: 2rem;
   --text-gap-small: 1rem;
-  --column-gap: 4vw;
+  --column-gap: calc(var(--indent) * 0.5);
   --text-size-huge: 46px;
   --text-size-xxlarge: 30px;
   --text-size-xlarge: 22px;
@@ -36,10 +38,27 @@
 
 html {
   height: 100%;
+  width: 100%;
   max-height: 100%;
   font-size: 62.5%;
   overflow-x: hidden;
   font-family: var(--default-font-family);
+  display: grid;
+  grid-template-columns: 1fr min(var(--page-max-width), 100vw) 1fr;
+  background: linear-gradient(
+    to right,
+    white,
+    #ddd calc((100% - var(--page-max-width)) * 0.5),
+    #ddd calc((100% - var(--page-max-width)) * 0.5 + var(--page-max-width)),
+    white
+  );
+}
+
+body {
+  background-color: white;
+  max-width: var(--page-max-width);
+  position: relative;
+  grid-column: 2 / 3;
 }
 
 section
@@ -52,7 +71,7 @@ section {
   padding: var(--indent);
 }
 
-section.no-indent.no-indent {
+section.no-indent.no-indent.no-indent {
   padding: 0;
 
   &-top {
@@ -85,6 +104,28 @@ section.no-indent.no-indent {
   }
   .last-in-column {
     padding-bottom: var(--indent);
+  }
+}
+
+.columns.collapse {
+  @media only screen and (max-width: 768px) {
+    grid-template-columns: 1fr;
+
+    > * {
+      grid-column: 1 / 2 !important;
+      grid-row: auto !important;
+      padding-left: var(--indent);
+      padding-right: var(--indent);
+      padding-top: var(--column-gap);
+      padding-bottom: var(--column-gap);
+
+      &:first-child {
+        padding-top: var(--indent);
+      }
+      &:last-child {
+        padding-bottom: var(--indent);
+      }
+    }
   }
 }
 
