--- a/components/form/form.astro
+++ b/components/form/form.astro
@@ -63,5 +63,6 @@ const background = convertColorString(background_color);
   .form form {
     display: flex;
     flex-direction: column;
+    gap: var(--text-gap);
   }
 </style>
