--- a/components/form/inputs/checkbox/checkbox.astro
+++ b/components/form/inputs/checkbox/checkbox.astro
@@ -12,7 +12,7 @@ const checked = Astro.props.checked ? true : undefined;
 const id = (name || "") + "-" + (key || "");
 ---
 
-<div class="checkbox">
+<div class="input checkbox">
   <input type="checkbox" {name} {id} {required} {checked} />
   <label for={id}>{label}</label>
 </div>
