--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,12 +2,12 @@
 @import "custom";
 
 :root {
-  --page-max-width: 1280px;
+  --page-max-width: 1920px;
 
   --indent: min(8vw, calc(var(--page-max-width) * 0.08));
+  --column-gap: calc(var(--indent) * 0.5);
   --text-gap: 2rem;
   --text-gap-small: 1rem;
-  --column-gap: calc(var(--indent) * 0.5);
   --text-size-huge: 46px;
   --text-size-xxlarge: 30px;
   --text-size-xlarge: 22px;
@@ -25,10 +25,24 @@
   --color-accent: 120 45 49;
   --text-color: var(--color-primary);
   --heading-color: var(--color-primary);
+
   --header-background-color: 0 0 0 / 0.6;
   --header-background-color-bottom: 0 0 0 / 0;
   --header-color: 255 255 255;
   --header-height: 72px;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-primary: 24 58 78;
+    --color-accent: 120 45 49;
+    --text-color: var(--color-primary);
+    --heading-color: var(--color-primary);
+
+    --header-background-color: 0 0 0 / 0.6;
+    --header-background-color-bottom: 0 0 0 / 0;
+    --header-color: 255 255 255;
+  }
 }
 
 * {
@@ -129,24 +143,19 @@ section.no-indent.no-indent.no-indent {
   }
 }
 
-// @media only screen and (min-width: 768px) {
-//   .columns section:not(.no-indent) {
-//     padding-left: calc(var(--column-gap) * 0.5);
-//     padding-right: calc(var(--column-gap) * 0.5);
-//     // padding-top: 0;
-//     // padding: 0;
+form {
+  label {
+    display: block;
+    font-size: var(--text-size-small);
+    font-family: var(--bold-font-family);
+    margin: 0 0 5px;
+  }
 
-//     &:first-child {
-//       padding-left: var(--indent);
-//       // padding-right: var(--column-gap);
-//     }
-
-//     &:last-child {
-//       // padding-left: var(--column-gap);
-//       padding-right: var(--indent);
-//     }
-//   }
-// }
+  input,
+  textarea {
+    width: 100%;
+  }
+}
 
 p,
 li,
