--- a/components/gallery/gallery.astro
+++ b/components/gallery/gallery.astro
@@ -61,7 +61,7 @@ const columns = Astro.props.columns || images.length;
       position: absolute;
       display: flex;
       flex-direction: column;
-      justify-content: end;
+      justify-content: flex-end;
       // inset: 0;
       bottom: 0;
       left: 0;
