--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -15,6 +15,10 @@ export interface Props {
 // import { SITE } from "../config";
 // import { SEO } from "astro-seo";
 
+import "sanitize.css";
+import "sanitize.css/forms.css";
+import "sanitize.css/typography.css";
+
 import "../styles/styles.scss";
 // import "../styles/layouts.scss";
 // import "node_modules/@glidejs/glide/dist/css/glide.core.min.css";
