Slider style updates

--- a/components/layout/slider/slider.astro
+++ b/components/layout/slider/slider.astro
@@ -236,7 +236,7 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
   }
 
   .slider {
-    --arrow-size: 3rem;
+    --arrow-size: 6rem;
     --bullet-size: 1rem;
   }
 
@@ -270,7 +270,7 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
     height: var(--arrow-size);
     width: var(--arrow-size);
     border: none;
-    background-color: #00000033;
+    background-color: #0000000a;
     border-radius: var(--arrow-size);
     backdrop-filter: blur(2px);
   }
@@ -288,7 +288,7 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
   }
 
   .glide__arrow svg {
-    color: white;
+    color: rgb(var(--color-accent));
     position: absolute;
     inset: 0;
     width: 100%;
