--- a/components/layout/slider/slider.astro
+++ b/components/layout/slider/slider.astro
@@ -2,6 +2,7 @@
 import MarkdownIt from "markdown-it";
 import "node_modules/@glidejs/glide/dist/css/glide.core.min.css";
 const md = new MarkdownIt({ html: true });
+import { Icon } from "astro-icon";
 
 export interface Props {
   slides: any[];
@@ -132,30 +133,10 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
         showArrows && (
           <div class="glide__arrows" data-glide-el="controls">
             <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="32"
-                height="32"
-                viewBox="0 0 32 32"
-              >
-                <path
-                  fill="currentColor"
-                  d="M10 16L20 6l1.4 1.4l-8.6 8.6l8.6 8.6L20 26z"
-                />
-              </svg>
+              <Icon name="carbon:chevron-left">
             </button>
             <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="32"
-                height="32"
-                viewBox="0 0 32 32"
-              >
-                <path
-                  fill="currentColor"
-                  d="M22 16L12 26l-1.4-1.4l8.6-8.6l-8.6-8.6L12 6z"
-                />
-              </svg>
+              <Icon name="carbon:chevron-right">
             </button>
           </div>
         )
