--- a/components/layout/slider/slider.astro
+++ b/components/layout/slider/slider.astro
@@ -2,7 +2,7 @@
 import MarkdownIt from "markdown-it";
 import "node_modules/@glidejs/glide/dist/css/glide.core.min.css";
 const md = new MarkdownIt({ html: true });
-import { Icon } from "astro-icon";
+import Icon from "@shared/icon.astro";
 
 export interface Props {
   slides: any[];
