Disable double-tap zoom for certain buttons

--- a/components/layout/slider/slider.astro
+++ b/components/layout/slider/slider.astro
@@ -264,6 +264,7 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
     background-color: #0000000a;
     border-radius: var(--arrow-size);
     backdrop-filter: blur(2px);
+    touch-action: manipulation;
   }
 
   .glide__arrow:hover {
