--- a/shared/astro/Footer.astro
+++ b/shared/astro/Footer.astro
@@ -34,6 +34,7 @@ const textColor = convertColorString(preferences.footer.foreground_color);
     display: grid;
     gap: 2rem;
     background-color: var(--background-color);
+    grid-template-rows: auto;
     grid-template-columns: auto auto;
   }
 
@@ -41,5 +42,12 @@ const textColor = convertColorString(preferences.footer.foreground_color);
     height: 100%;
     display: flex;
     align-items: center;
+  }
+
+  @media only screen and (max-width: 768px) {
+    section.footer {
+      grid-template-rows: auto auto;
+      grid-template-columns: auto;
+    }
   }
 </style>
