--- a/layouts/PageLayout.astro
+++ b/layouts/PageLayout.astro
@@ -9,7 +9,7 @@ type Props = {
   };
   id?: string;
   paths?: any[];
-  currentPath: string;
+  currentPath?: string;
 };
 
 if (!Astro.props.frontmatter) {
