--- a/pages/[...slug].astro
+++ b/pages/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import PageLayout from "@layouts/PageLayout.astro";
-import { getCollection, CollectionEntry } from "astro:content";
+import { getCollection, type CollectionEntry } from "astro:content";
 
 export interface Props {
   page: CollectionEntry<"pages">;
